[metadata]
name = labxdb-tools
version = 0.5.0
author = Charles E. Vejnar
description = Versatile databases for genomic sequencing and lab management.
long_description = file: README.md
long_description_content_type = text/markdown
license = Mozilla Public License 2.0 (MPL 2.0)
url = https://gitlab.com/vejnar/LabxDB-tools

[options]
install_requires =
    requests
    urllib3
    pyfnutils
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    export_sra_fastq = labxdb_scripts.export_sra_fastq:main
    export_sra = labxdb_scripts.export_sra:main
    fastq_strip = labxdb_scripts.fastq_strip:main
    import_seq = labxdb_scripts.import_seq:main
    import_sra_id = labxdb_scripts.import_sra_id:main
    import_sra = labxdb_scripts.import_sra:main
